--- a/index.Rmd
+++ b/index.Rmd
@@ -28,4 +28,4 @@ library(postcards)
 
 ```
 
-I’m a current undergraduate student-athlete at Macalester College, pursuing a B.A. in applied mathematics and statistics (expected May 2023) along with a minor in computer science. I’m working towards a future career in data analysis, data science, or other related fields. I have a strong passion for numbers and their practical applications, as well as working to solve meaningful problems that can have an impact for the greater good. Hosted on this website is a collection of my works in this field, ranging from school group projects, internships, and independent projects. 
+I’m a current undergraduate student-athlete at Macalester College, pursuing a B.A. in statistics (expected May 2023) along with a minor in computer science. I’m working towards a future career in data analysis, data science, sports analytics, or other related fields. I have a strong passion for numbers and their practical applications, as well as working to solve meaningful problems that can have an impact for the greater good. Hosted on this website is a collection of my works in this field, ranging from school group projects, internships, and independent projects. 
