--- a/index.Rmd
+++ b/index.Rmd
@@ -5,7 +5,7 @@ description: |
 image: headshot.jpg
 links:
   - label: LinkedIn
-    url: "https://www.linkedin.com/in/nolan-meyer-983ab1199/"
+    url: "https://www.linkedin.com/in/nolan-e-meyer"
   - label: GitHub
     url: "https://github.com/nolan-meyer"
   - label: Email
